--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@remix-run/react": "^2.13.0",
     "aos": "^2.3.4",
     "framer-motion": "^11.11.1",
+    "lucide-react": "^0.452.0",
     "react": "^18.3.1",
     "react-background-video-player": "^1.1.8",
     "react-dom": "^18.3.1",
@@ -20,6 +22,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@remix-run/dev": "^2.13.0",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
